objects/Deals_Entities__c.object
<CustomObject>
    <fields>
        <fullName>Business_Location__c</fullName>
        <formula>Entity__r.Business_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deals__c</fullName>
        <label>Sale</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Entity</relationshipLabel>
        <relationshipName>Deals_Entities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EIN_Number__c</fullName>
        <formula>Entity__r.EIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EIN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <formula>Entity__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Sales</relationshipLabel>
        <relationshipName>Deals_Entities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Federal_Return_Due_Date__c</fullName>
        <formula>Entity__r.Federal_Return__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Return Due Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Adoption_Date__c</fullName>
        <formula>Entity__r.Plan_Adoption_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Adoption Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Sponsor__c</fullName>
        <formula>Entity__r.Plan_Sponsor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Sponsor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Begin_Date__c</fullName>
        <formula>Entity__r.Date_SLA_began__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_End_Date__c</fullName>
        <formula>Entity__r.Date_SLA_End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Form__c</fullName>
        <formula>TEXT(Entity__r.Tax_Form__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Status__c</fullName>
        <formula>text(Entity__r.Tax_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_End_Month__c</fullName>
        <formula>Entity__r.Year_End_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year End Month</label>
        <type>Text</type>
    </fields>
    <label>Deals &amp; Entities</label>
    <nameField>
        <label>Deals &amp; Entities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deals &amp; Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>